force-app/main/default/objects/Leave_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee requesting leave.</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>LeaveRequests</relationshipName>
    <type>Lookup</type>
</CustomField>