force-app/main/default/objects/Leave_Request__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Total number of leave days requested.</description>
    <label>Number of Days</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>